# duo-buildroot-sdk

./: .gitignore  README-en.md  README-ja.md  README-zh.md  README.md  build.sh  build_milkv.sh
freertos/cvitek/arch/: CMakeLists.txt
freertos/cvitek/arch/arm64/: CMakeLists.txt
freertos/cvitek/arch/arm64/include/: io.h  linkage.h  macro.h  mmu.h  system.h  vectors.h  xbasic_types.h  xdebug.h  xil_exception.h  xil_io.h  xil_sleep.h  xparameters.h  xpseudo_asm_gcc.h  xreg_cortexa53.h  xscugic.h  xscugic_hw.h  xstatus.h  xtime_l.h  xttcps.h  xttcps_hw.h
freertos/cvitek/arch/arm64/include/asm/: atomic.h  atomic_ll_sc.h  barrier.h  cmpxchg.h  irqflags.h  processor.h  spinlock.h
freertos/cvitek/arch/arm64/src/: asm_vectors.S  boot.S  cache.S  initialise_monitor_handles.c  mmu.c  vectors.c  xil-crt0.S  xil_assert.c  xil_exception.c  xil_sleep.c  xscugic.c  xscugic_g.c  xscugic_hw.c  xscugic_intr.c  xscugic_sinit.c  xtime_l.c
freertos/cvitek/arch/riscv64/: CMakeLists.txt
freertos/cvitek/arch/riscv64/include/: arch_helpers.h  arch_sleep.h  csr.h
freertos/cvitek/arch/riscv64/src/: arch_sleep.c  cache.c  start.S  trap_c.c  vectors.S
freertos/cvitek/common/: CMakeLists.txt
freertos/cvitek/common/include/cv1835/: aacdec.h  aacenc.h  atoi.h  bspconfig.h  clk.h  cvi_ae.h  cvi_ae_comm.h  cvi_audio.h  cvi_awb.h  cvi_awb_comm.h  cvi_bin.h  cvi_buffer.h  cvi_comm_3a.h  cvi_comm_adec.h  cvi_comm_aenc.h  cvi_comm_ai.h  cvi_comm_aio.h  cvi_comm_gdc.h  cvi_comm_isp.h  cvi_comm_mipi_tx.h  cvi_comm_rc.h  cvi_comm_region.h  cvi_comm_sns.h  cvi_comm_sys.h  cvi_comm_vb.h  cvi_comm_vdec.h  cvi_comm_venc.h  cvi_comm_vi.h  cvi_comm_video.h  cvi_comm_vo.h  cvi_comm_vpss.h  cvi_common.h  cvi_debug.h  cvi_defines.h  cvi_errno.h  cvi_gdc.h  cvi_isp.h  cvi_isp_backwardcompatible.h  cvi_math.h  cvi_mipi.h  (+30 more)
freertos/cvitek/common/include/cv1835/arm_optimized-routines/: asmdefs.h
freertos/cvitek/common/include/cv1835/linux/: __ffs.h  __fls.h  asm-bug.h  atomic.h  bitops.h  bug.h  cdev.h  compiler.h  confname.h  device.h  err.h  errno.h  fb.h  fdtable.h  file.h  fls64.h  fs.h  int-ll64.h  interrupt.h  io.h  ioctl.h  ioport.h  kdev_t.h  kernel.h  kref.h  list.h  log2.h  math64.h  media-bus-format.h  miscdevice.h  mman-common.h  mman.h  of.h  of_reserved_mem.h  platform_device.h  poll.h  printk.h  property.h  queue.h  semaphore.h  (+12 more)
freertos/cvitek/common/include/cv1835/media/: v4l2-common.h  v4l2-ctrls.h  v4l2-dev.h  v4l2-device.h  v4l2-event.h  v4l2-fh.h  v4l2-ioctl.h  v4l2-subdev.h  videobuf2-core.h  videobuf2-v4l2.h
freertos/cvitek/common/include/interdrv/common/: cvi_comm_sys.h  cvi_comm_video.h  cvi_errno.h  cvi_math.h  cvi_mipi.h  cvi_sns_ctrl.h  sample_comm.h
freertos/cvitek/common/include/riscv64/: cvi_list.h  mmio.h
freertos/cvitek/common/src/cv1835/: atoi.c  base.c  char_dev.c  class.c  clk.c  core.c  device.c  file.c  io.c  ioctl.c  malloc.c  misc.c  mmap.c  of_reserved_mem.c  open.c  platform.c  printf.c  property.c  puts.c  rtos_malloc.c  rtos_queue.c  select.c  semaphore.c  sleep.c  snprintf.c  spinlock.c  spinlock_debug.c  strncpy.c  sysconf.c  time.c  wait.c
freertos/cvitek/common/src/riscv64/: malloc.c  memset.c  printf.c  putchar.c  sleep.c  snprintf.c  time.c
freertos/cvitek/driver/: CMakeLists.txt
freertos/cvitek/driver/base/: CMakeLists.txt
freertos/cvitek/driver/base/include/: base.h
freertos/cvitek/driver/base/src/: base.c
freertos/cvitek/driver/common/: CMakeLists.txt
freertos/cvitek/driver/common/src/: system.c
freertos/cvitek/driver/gpio/: CMakeLists.txt
freertos/cvitek/driver/gpio/include/: gpio.h
freertos/cvitek/driver/gpio/src/: gpio.c
freertos/cvitek/driver/i2c/: CMakeLists.txt
freertos/cvitek/driver/i2c/include/: i2c.h
freertos/cvitek/driver/i2c/src/: i2c.c
freertos/cvitek/driver/pinmux/: CMakeLists.txt
freertos/cvitek/driver/pinmux/src/: pinmux.c
freertos/cvitek/driver/rtos_cmdqu/: CMakeLists.txt
freertos/cvitek/driver/rtos_cmdqu/include/: rtos_cmdqu.h
freertos/cvitek/driver/spinlock/: CMakeLists.txt
freertos/cvitek/driver/spinlock/include/: cvi_spinlock.h
freertos/cvitek/driver/spinlock/src/: cvi_spinlock.c
freertos/cvitek/driver/sys/: CMakeLists.txt
freertos/cvitek/driver/sys/include/: devmem.h  hashmap.h
freertos/cvitek/driver/sys/src/: devmem.c  hashmap.c
freertos/cvitek/driver/uart/: CMakeLists.txt
freertos/cvitek/driver/uart/include/: uart.h
freertos/cvitek/driver/uart/src/: uart.c
freertos/cvitek/hal/cv181x/: CMakeLists.txt
freertos/cvitek/hal/cv181x/config/: intr_conf.h  top_reg.h
freertos/cvitek/hal/cv181x/pinmux/: CMakeLists.txt
freertos/cvitek/hal/cv181x/uart/: CMakeLists.txt
freertos/cvitek/hal/cv1835/i2c/: CMakeLists.txt
freertos/cvitek/hal/cv1835/vip/: CMakeLists.txt
freertos/cvitek/hal/cv1835/vip/src/: cmdq.c  (+6 more)
freertos/cvitek/kernel/: CMakeLists.txt
freertos/cvitek/kernel/include/cv1835/: FreeRTOSConfig.h  sched.h
freertos/cvitek/kernel/src/: sched.c
freertos/cvitek/task/: CMakeLists.txt
freertos/cvitek/task/audio/: CMakeLists.txt
freertos/cvitek/task/audio/include/: cvi_comm_aio.h  cvi_common.h  cvi_defines.h  cviaudio_algo_interface.h  cviaudio_rtos_align.h  cviaudio_rtos_cmd.h
freertos/cvitek/task/camera/: CMakeLists.txt
freertos/cvitek/task/camera/include/: cam_rtos_cmd.h  cam_task.h
freertos/cvitek/task/comm/: CMakeLists.txt
freertos/cvitek/task/comm/include/: comm.h  comm_def.h
freertos/cvitek/task/demo/Blinky_Demo/: CMakeLists.txt  main_blinky.c
freertos/cvitek/task/demo/Full_Demo/: CMakeLists.txt  RegTest_riscv.S  main_full.c  reg_test.S
freertos/cvitek/task/demo/POSIX_Demo/: CMakeLists.txt  main_posix.c  posix_demo.c  posix_demo.h
freertos/cvitek/task/isp/: CMakeLists.txt
freertos/cvitek/task/main/: CMakeLists.txt
freertos/cvitek/task/main/src/: FreeRTOS_tick_config.c  main.c
freertos/cvitek/task/rgn/: CMakeLists.txt
freertos/cvitek/task/rgn/include/: rgn_main.h
freertos/cvitek/task/vcodec/: CMakeLists.txt
freertos/cvitek/task/vcodec/include/: h26x_enc.h
freertos/cvitek/task/vi/: CMakeLists.txt
freertos/cvitek/task/vip/: CMakeLists.txt
(+5837 files in other folders)
