file(GLOB _SOURCES "src/${RUN_ARCH}/*.c" "src/SSP_Algorithm_20220128/*.c" "src/unit_test/*.c")
file(GLOB _HEADERS "include/*.h" "src/SSP_Algorithm_20220128/*.h" "src/unit_test/*.h")

include_directories(include)
include_directories(src)
include_directories(src/SSP_Algorithm_20220128)
include_directories(src/unit_test)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/arch)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/common)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/driver)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/kernel)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/driver/rtos_cmdqu)
include_directories(${CMAKE_INSTALL_INC_PREFIX}/driver/fast_image)

include_directories(../comm/include)
include_directories(../common/include/cv181x)
#include_directories(../../common/include/cv1835)
add_definitions(-DPLATFORM_RTOS)
#add_definitions(-DAUDIO_UNIT_TEST)
#add_definitions(-DFE_WAVE_FILE=/pattern/FE_ht_s_ref_hw_8k_1.wav)
#add_definitions(-DNE_WAVE_FILE=/pattern/NE_ht_s_ref_hw_8k_1.wav)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFE_WAVE_FILE=./pattern/FE_ht_s_ref_hw_8k_1.wav -DNE_WAVE_FILE=./pattern/NE_ht_s_ref_hw_8k_1.wav")

add_library(audio STATIC ${_SOURCES})
install(TARGETS audio DESTINATION lib)

